# pywiggum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPRINGFIELD_PD.md  pyproject.toml
.github/workflows/: publish.yml
examples/: kanban.json  wiggum-routing.yaml  wiggum.yaml
src/pywiggum/: __init__.py  cli.py  config.py  controls.py  history.py  kanban.py  prompt.py  routing.py  runner.py
src/pywiggum/agents/: __init__.py  api.py  base.py  claude_code.py  human.py  opencode.py
src/pywiggum/dashboard/: __init__.py  api.py  server.py
src/pywiggum/dashboard/static/: index.html
tests/: __init__.py  test_config.py  test_controls.py  test_history.py  test_kanban.py  test_routing.py
